# amcpp

./: CMakeLists.txt  README.md
00-hello-world/: 00-simple.cpp  01-hello-world.cpp  02-hello-you.cpp  CMakeLists.txt
01-types/: 03a-types.cpp  03b-types-fixed.cpp  04a-integer-operations.cpp  04b-fp-operations.cpp  04c-string-operations.cpp  04d-string-operations-fixed.cpp  05a-safe-conversions.cpp  05b-unsafe-conversions.cpp  05c-narrowing-conversions.cpp  CMakeLists.txt
cmake/: FindMSGSL.cmake  FindSanitizer.cmake
include/amcpp/: facilities.hpp
